# ltd

./: .dockerignore  Dockerfile  Makefile  README.md  buf.gen.yaml  package-lock.json  package.json
axum/: .dockerignore  .gitignore  Cargo.toml
axum/src/: error.rs  main.rs
client/: index.html  package-lock.json  package.json  rspack.config.ts  tsconfig.json
client/src/: App.css  App.tsx  Global.tsx  index.css  main.tsx  types.ts
client/src/components/: CheckBox.tsx  Dots.tsx  Header.tsx  ItemCmp.tsx  Nav.tsx  Suits.tsx
client/src/components/Auth/: index.module.css  index.tsx
client/src/components/CheckBox/: index.module.css  index.tsx
client/src/components/Footer/: index.module.css  (+1 more)
client/src/contexts/: ItemsProvider.tsx
client/src/hooks/: useWebSocket.ts
client/src/routes/: Global.tsx  Login.tsx
ldap/: docker-compose.yml
ldap/data/: lldap_config.toml
proto/ltd/v1/: ws.proto
server/: Cargo.toml
server/src/: error.rs  main.rs  types.rs
src/: App.svelte  app.css
svelte/: index.html  package-lock.json  package.json  tailwind.config.js
svelte/src/: App.svelte  Color.ts  ItemRenamable.svelte  Login.svelte  Nav.svelte  Rename.svelte  app.css  types.ts
svelte/src/lib/: All.svelte  Animation.ts  Archived.svelte  Color.ts  Colored.svelte  DeleteArchived.svelte  Dialog.svelte  DialogToDelete.svelte  DialogToRename.svelte  Dot.svelte  Footer.svelte  Header.svelte  ItemColored.svelte  ItemRenamable.svelte  Login.svelte  Modal.svelte  Nav.svelte  Rename.svelte  SortableList.svelte  Toast.ts  Toggle.ts  stores.ts  toast.ts  toggle.ts  types.ts
(+22 files in other folders)
